created game room controller. The Game Room can now display the usernames of the two opposing players

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -35,3 +35,7 @@
     </div>
 
 </div>
+<h2> Active Games </h2>
+<div class="list-group">
+  <a class="list-group-item" ng-repeat="game in dash.myGames" href="#!/game_room/{{game._id}}"> {{ game.name }}</a>
+</div>
