--- a/public/views/game_room.html
+++ b/public/views/game_room.html
@@ -1,4 +1,12 @@
 <div class="container">
+	<div class="row">
+		<div class="col-xs-6">
+			<h2>{{room.playerOne}}</h2>
+		</div>
+		<div class="col-xs-6">
+			<h2> {{room.playerTwo}} </h2>
+		</div>
+	</div>
 	<div class="box">
 		
 	</div>
