--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -50,7 +50,19 @@
 	vertical-align: top;
 	display: inline-block;
 }
-
+.team-display {
+	cursor: pointer;
+	border: 1px solid black;
+	margin-bottom: 10px;
+	padding: 20px;
+	> h4 {
+		display: inline-block;
+		border-bottom: 2px solid black;
+	}
+}
+.thumb {
+	max-height: 200px;
+}
 .moves {
 	width: 50%;
 	margin-bottom: 10px;
