--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -27,14 +27,10 @@
       </div>
     </div>
  
-<h2> My Current Team: {{dash.myTeam.name}} </h2>
-<div class="row">
-    <div class="col-md-3" ng-repeat="char in dash.myTeam.members">
-        <h4>{{char.name}}</h4>
-        <img class="thumb img-responsive" ng-src="{{char.image}}" />
-    </div>
-
-</div>
+<h2> My Teams</h2>
+<ig-team 
+  ng-repeat="team in dash.myTeams" 
+  info="team"></ig-team>
 <h2> Active Games </h2>
 <div class="list-group">
   <a class="list-group-item" ng-repeat="game in dash.myGames" href="#!/game_room/{{game._id}}"> {{ game.name }}</a>
