--- a/public/views/game_room.html
+++ b/public/views/game_room.html
@@ -1,20 +1,28 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-6">
-			<h2>{{room.playerOne}}</h2>
+			<h2>{{room.activeUser._user.username}}</h2>
+			<ig-team team="room.activeUser._team">
 		</div>
 		<div class="col-xs-6">
-			<h2> {{room.playerTwo}} </h2>
+			<h2> {{room.opponent._user.username}} </h2>
+			<ig-team team="room.opponent._team">
 		</div>
 	</div>
 	<div class="box">
-		
+		<div class="message" ng-repeat="message in room.game.history">
+			<p> {{message.player}} says: {{message.message}} </p>
+		</div>
 	</div>
 	<div class="inputs">
-		<div class="form-group">
-			<label for="messages"> Messages </label>
-			<input type="text" class="form-control" ng-model="game.message" />
-		</div>
+		<form ng-submit="room.makeMove(room.message)">
+			<div uib-alert ng-repeat="error in room.valErrors track by $index" class="alert-danger" close="room.dismissError($index)">{{error}}</div>
+			<div class="form-group">
+				<label for="messages"> Make Your Move! </label>
+				<textarea id="messages" rows="3" class="form-control" ng-model="room.message" />
+			</div>
+			<button type="submit" class="btn btn-primary">Submit </button>
+		</form>
 	</div>
 
 </div>
