--- a/public/views/templates/character_select.html
+++ b/public/views/templates/character_select.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="col-sm-12">
 				<h3> Opponent's Team </h3>
-			<ig-team team="dashModal.game.playerOne._team"></ig-team>
+			<ig-team team="dashModal.game.playerOne.team"></ig-team>
 		</div>
 	</div>
 </div>
