--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -77,7 +77,19 @@
 .box {
 	overflow: scroll;
 	padding: 3em;
-	border: 2px solid blue;
 	width: 100%;
-	height: 500px;
+	border: 2px solid blue;
+	display: inline-block;
+	height: 450px;
+}
+
+.selected-char {
+	border: 3px solid red;
+}
+.battle-display {
+	border: 1px solid black;
+	padding: 20px;
+	> .row {
+		margin-bottom: 10px;
+	}
 }
